--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -224,7 +224,8 @@
 }
 
 .header__menu-content,
-.header__category-items {
+.header__category-items,
+.header__overview-link {
   margin: 0 0 0 20px;
   list-style: none;
   padding: 0;
