change functionallity of truck carousel

--- a/blocks/v2-truck-lineup/v2-truck-lineup.css
+++ b/blocks/v2-truck-lineup/v2-truck-lineup.css
@@ -135,6 +135,10 @@ p.v2-truck-lineup__description {
 }
 
 /* Navigation */
+.v2-truck-lineup__navigation::-webkit-scrollbar {
+  display: none;
+}
+
 ul.v2-truck-lineup__navigation {
   display: flex;
   flex-flow: row nowrap;
