#75 Update mega menu

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -113,7 +113,7 @@
 .header__link.header__link-accordion:any-link {
   justify-content: space-between;
   padding: 20px 0;
- }
+}
 
 .header__link-accordion::after {
   content: '';
@@ -236,7 +236,8 @@
 }
 
 .header__menu-content picture,
-.header__category-subtitle {
+.header__category-subtitle,
+.header__menu-content-footer {
   display: none;
 }
 
@@ -246,17 +247,17 @@
   flex-direction: column;
 }
 
-.header__accortion-container {
+.header__accordion-container {
   display: grid;
   grid-template-rows: 0fr;
   transition: grid-template-rows 500ms;
 }
 
-.header__menu-open > .header__accortion-container {
+.header__menu-open > .header__accordion-container {
   grid-template-rows: 1fr;
 }
 
-.header__accortion-content-wrapper {
+.header__accordion-content-wrapper {
   overflow: hidden;
 }
 
@@ -312,6 +313,18 @@
     max-width: unset;
   }
 
+  .header__category-item {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+    padding: 0;
+    min-width: 150px;
+  }
+
+  .header__category-item a:any-link {
+    display: block;
+  }
+
   .header__link-accordion::after {
     display: none;
   }
@@ -344,5 +357,166 @@
   .header__action-item--close-menu,
   .header__close-menu {
     display: none;
+  }
+
+  .header__main-nav-item .header__accordion-container {
+    display: flex;
+  }
+
+  .header__main-nav-item > .header__accordion-container {
+    position: fixed;
+    background: var(--c-white);
+    width: var(--wrapper-width);
+    left: 50%;
+    transform: translateX(-50%);
+    box-shadow: 0 10px 15px rgb(0 0 0 / 20%);
+    top: var(--nav-height);
+    transition: unset;
+    overflow-y: auto;
+    max-height: calc(100vh - 2 * var(--nav-height));
+    display: none;
+  }
+
+  .header__main-nav-item.header__menu-open > .header__accordion-container {
+    display: flex;
+    min-height: 370px;
+    flex-direction: column;
+  }
+
+  .header__accordion-content-wrapper {
+    display: flex;
+    box-sizing: border-box;
+    min-width: 180px;
+    gap: 30px;
+  }
+
+  .header__main-nav-item > .header__accordion-container > .header__accordion-content-wrapper {
+    padding: 32px 64px;
+  }
+
+  .header__link.header__link-accordion:any-link {
+    padding: 12px 0;
+    border-bottom: none;
+  }
+
+  .header__main-nav-link.header__link:any-link {
+    border: solid 2px transparent;
+  }
+
+  .header__main-nav-link.header__link:hover,
+  .header__main-nav-link.header__link:active,
+  .header__main-nav-link.header__link:focus {
+    border-bottom: solid 2px var(--c-grey-4);
+  }
+
+  .header__accordion-content-wrapper .header__menu-content {
+    margin: 0;
+    flex: 0;
+  }
+
+  .header__accordion-content-wrapper--with-images .header__menu-content {
+    flex: 1 1 100%;
+  }
+
+  .header__accordion-content-wrapper--with-images .header__category-item {
+    width: calc(100% / 3 - 12px);
+  }
+
+  .header__overview-link {
+    display: none;
+  }
+
+  .header__category-subtitle,
+  .header__category-item picture,
+  .header__link-description {
+    display: block;
+  }
+
+  .header__category-item img {
+    width: 200px;
+    height: auto;
+  }
+
+  .header__menu-heading:hover,
+  .header__category-item .header__link:hover {
+    text-decoration: underline;
+  }
+
+  .header .header__menu-content .header__menu-heading {
+    font-size: 24px;
+    letter-spacing: var(--f-heading-5-letter-spacing);
+    line-height: var(--f-heading-5-line-height);
+  }
+
+  .header__category-subtitle {
+    margin-bottom: 16px;
+  }
+
+  .header__category-subtitle:not(:empty) {
+    font-size: 12px;
+    letter-spacing: var(--f-caption-letter-spacing);
+    line-height: var(--f-caption-line-height);
+    margin-bottom: 40px;
+    color: var(--c-grey-600);
+  }
+
+  .header__category-items {
+    margin: 0;
+    column-gap: 12px;
+    row-gap: 16px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  /* stylelint-disable-next-line no-descending-specificity */
+  .header__category-item .header__link {
+    display: inline;
+    padding: 0;
+    border-bottom: solid 1px transparent;
+    text-wrap: balance;
+  }
+
+  .header__category-item a:first-of-type {
+    display: inline;
+  }
+
+  .header__category-item a::after {
+    content: '';
+    background-image: url('/icons/chevron-down.svg');
+    width: 0.75em;
+    height: 0.75em;
+    background-repeat: no-repeat;
+    transform: rotate(-90deg);
+    background-position: center;
+    background-size: cover;
+    display: inline-flex;
+  }
+
+  .header__link-description {
+    font-size: 14px;
+    letter-spacing: var(--f-subtitle-2-letter-spacing);
+    line-height: var(--f-subtitle-2-line-height);
+    color: var(--c-grey-500);
+  }
+
+  .header__menu-content-footer {
+    display: flex;
+    background: var(--c-grey-100);
+    padding: 0 20px;
+    justify-content: center;
+  }
+
+  .header__category--images-list .header__category-items {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 32px;
+  }
+
+  .header__category--images-list .header__category-item {
+    width: 150px;
+  }
+
+  .header__category--images-list .header__category-item img {
+    width: 100%;
   }
 }
