--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -239,10 +239,7 @@
   padding: 0;
 }
 
-.header__category-items > .header__link:not(:first-of-type) {
-  display: none;
-}
-
+.header__category-items > .header__link:not(:first-of-type)
 .header__menu-content picture,
 .header__category-subtitle,
 .header__menu-content-footer {
