--- a/blocks/v2-inpage-navigation/v2-inpage-navigation.css
+++ b/blocks/v2-inpage-navigation/v2-inpage-navigation.css
@@ -190,6 +190,13 @@ then we change it for the next section item in main */
   background-color: var(--c-cta-blue-active);
 }
 
+@media (min-width: 744px) {
+  .v2-inpage-navigation__wrapper {
+    padding-left: 32px;
+    padding-right: 32px;
+  }
+}
+
 @media (min-width: 1200px) {
   :root {
     --inpage-navigation-height: 64px;
