--- a/blocks/v2-video/v2-video.css
+++ b/blocks/v2-video/v2-video.css
@@ -1,4 +1,12 @@
 /* Full width block */
+.section.v2-video-container {
+  padding-bottom: 0;
+}
+
+.section + .section.v2-video-container {
+  margin-top: -40px;
+}
+
 main .section.v2-video-container .v2-video-wrapper {
   padding: 0;
   color: var(--c-white);
@@ -94,8 +102,12 @@ main .section.v2-video-container .v2-video-wrapper {
 }
 
 @media (min-width: 1200px) {
+  .section + .section.v2-video-container {
+    margin-top: -136px;
+  }
+
   .v2-video {
-    --video-inset: inset(140px calc((100vw - var(--wrapper-width)) / 2) round 8px);
+    --video-inset: inset(136px calc((100vw - var(--wrapper-width)) / 2) round 8px);
   }
 
   .v2-video .v2-video__content-wrapper {
