#129 Remove empty space between trucks lineup and dealer locator section

--- a/blocks/v2-dealer-locator-teaser/v2-dealer-locator-teaser.css
+++ b/blocks/v2-dealer-locator-teaser/v2-dealer-locator-teaser.css
@@ -1,3 +1,7 @@
+.section + .v2-dealer-locator-teaser-container {
+  margin-top: -40px;
+}
+
 .v2-dealer-locator-teaser {
   height: 509px;
   display: flex;
@@ -67,6 +71,10 @@
 }
 
 @media (min-width: 1200px) {
+  .section + .v2-dealer-locator-teaser-container {
+    margin-top: -136px;
+  }
+
   .v2-dealer-locator-teaser {
     align-items: center;
     height: 792px;
