fix #132: adjust typography and sizings

--- a/blocks/v2-dealer-locator-teaser/v2-dealer-locator-teaser.css
+++ b/blocks/v2-dealer-locator-teaser/v2-dealer-locator-teaser.css
@@ -16,42 +16,42 @@
 .v2-dealer-locator-teaser .v2-dlt__content-wrapper {
   width: 100%;
   max-width: var(--wrapper-width);
+  padding: var(--section-div-padding);
 }
 
 .v2-dealer-locator-teaser .v2-dlt__content {
   background-color: var(--c-white);
   text-align: center;
-  padding: 32px 24px 24px;
-  margin: 0 24px 24px;
-  border-radius: 8px;
+  padding: 24px;
+  border-radius: 12px;
   box-shadow: 0 4px 44px 0 rgb(0 0 0 / 10%);
   display: flex;
   flex-direction: column;
-  gap: 24px;
 }
 
-.v2-dealer-locator-teaser .v2-dlt__content h4 {
-  color: #141414;
-  font-family: var(--font-family-body);
-  font-size: 32px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 125%;
-  letter-spacing: 0.25px;
-  margin: 0;
-  text-transform: none;
+.v2-dealer-locator-teaser .v2-dlt__title,
+.v2-dealer-locator-teaser .v2-dlt__content p {
+  max-width: 592px;
+}
+
+.v2-dealer-locator-teaser .v2-dlt__title {
+  margin: 0 auto 0.5rem;
+  font-family: var(--font-family-heading);
+  font-size: var(--f-heading-5-font-size);
+  line-height: var(--f-heading-5-line-height);
+  letter-spacing: var(--f-heading-5-letter-spacing);
 }
 
 .v2-dealer-locator-teaser .v2-dlt__content p {
-  color: #141414;
-  font-feature-settings: 'clig' off, 'liga' off;
-  font-family: var(--font-family-body);
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 144%;
-  letter-spacing: 0.5px;
-  margin: 0;
+  margin: 0 auto;
+  font-size: var(--f-body-font-size);
+  line-height: var(--f-body-line-height);
+  letter-spacing: var(--f-body-letter-spacing);
+}
+
+/* stylelint-disable-next-line no-descending-specificity */
+.v2-dealer-locator-teaser .v2-dlt__content p + p {
+  margin-top: 1rem;
 }
 
 @media (min-width: 744px) {
@@ -60,9 +60,7 @@
   }
 
   .v2-dealer-locator-teaser .v2-dlt__content {
-    margin: 0 32px 32px 0;
     padding: 32px;
-    gap: 16px;
   }
 }
 
@@ -73,7 +71,28 @@
   }
 
   .v2-dealer-locator-teaser .v2-dlt__content {
-    width: 400px;
+    padding-right: 48px;
+    padding-left: 48px;
+    width: 456px;
     text-align: left;
+  }
+
+  .v2-dealer-locator-teaser .v2-dlt__title,
+  .v2-dealer-locator-teaser .v2-dlt__content p {
+    margin-right: 0;
+    margin-left: 0;
+  }
+
+  .v2-dealer-locator-teaser .v2-dlt__title {
+    font-size: var(--f-heading-4-font-size);
+    line-height: var(--f-heading-4-line-height);
+    letter-spacing: var(--f-heading-4-letter-spacing);
+  
+  }
+
+  .v2-dealer-locator-teaser .v2-dlt__content p {
+    font-size: var(--f-body-2-font-size);
+    line-height: var(--f-body-2-line-height);
+    letter-spacing: var(--f-body-2-letter-spacing);
   }
 }
