Fix multiple mobile/desktop bugs for navigation #121 (#164)
* fix mobile use cases of #121
* close (nested) items after closing menu or switch to desktop viewport
* reintroduce disable scroll for desktop
* fix conflicting behaviour on mobile
* align motion of footer and header

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -67,7 +67,7 @@
 
 .footer-list .icon-chevron-down {
   margin-left: auto;
-  transition: transform var(--duration-medium) cubic-bezier(0.45, 0, 0.125, 1);
+  transition: transform var(--duration-small) var(--easing-standard);
 }
 
 .footer-list .expand .icon-chevron-down {
