#156 - Decrease the Hero height to allow scroll indicator visibility in viewport

--- a/blocks/v2-hero/v2-hero.css
+++ b/blocks/v2-hero/v2-hero.css
@@ -26,7 +26,7 @@
   --scroll-dot-width: 9px;
   --v2-hero-padding: 32px;
 
-  height: calc(100vh - var(--nav-height));
+  height: calc(100vh - (var(--nav-height) * 2));
   overflow: hidden;
   position: relative;
 }
